# cloak

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  SECURITY.md  deny.toml
.cargo/: audit.toml  config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker-push.yml  homebrew-bump.yml  npm-dist-tag.yml  npm-publish.yml  release.yml  security.yml  smoke.yml
crates/cloak-cli/: Cargo.toml
crates/cloak-cli/src/: biometric_macos.rs  main.rs  prompt.rs
crates/cloak-cli/src/commands/: add.rs  audit_log.rs  backup.rs  clients.rs  completions.rs  daemon.rs  daemon_unlock.rs  doctor.rs  dotenv.rs  export.rs  get.rs  import.rs  init.rs  list.rs  mod.rs  panic.rs  recovery_display.rs  restore.rs  rm.rs  run.rs  set.rs  setup.rs  setup_starter_policy.toml  show.rs  status.rs  unlock.rs
crates/cloak-cli/tests/: cli.rs
crates/cloak-cli/tests/snapshots/: cli__help_text.snap
crates/cloak-core/: Cargo.toml
crates/cloak-core/migrations/: 0001_init.sql  0002_recovery_wrap.sql
crates/cloak-core/src/: audit.rs  biometric.rs  crypto.rs  daemon.rs  egress.rs  error.rs  handlers.rs  ipc.rs  keychain.rs  lib.rs  peer_auth.rs  policy.rs  recovery.rs  session.rs  store.rs  vault.rs
crates/cloak-core/tests/: handlers_e2e.rs  ipc_e2e.rs  peer_auth_linux.rs  peer_auth_macos.rs  rollback_mirror.rs
docs/: ARCHITECTURE.md  FAQ.md  IPC_WIRE.md  QUICKSTART.md  RELEASE.md  SECURITY_INVARIANTS.md  THREAT_MODEL.md  demo.tape
docs/spec/: mcp-tools.md
packaging/cloak-dxt/: README.md  manifest.json
packaging/cloak-dxt/server/: first-run.js
packaging/cloak-dxt/server/binaries/: .gitkeep
scripts/: build-dxt.sh  dev.cloak.cloakd.plist  install-launchd.sh  policy.example.toml  smoke-test.sh
scripts/polkit/: dev.cloak.policy
