[workspace]
resolver = "2"
members = ["crates/cloak-core", "crates/cloak-cli"]

[workspace.package]
version = "0.9.0-rc1"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/cloakward/cloak"
rust-version = "1.80"

[workspace.dependencies]
# Crypto — libsodium only.
libsodium-sys-stable = { version = "1.22", features = ["fetch-latest", "minimal"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }
subtle = "2.6"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap_complete = "4.5"
rpassword = "7.3"

# Errors / logging
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utility
hex = "0.4"
base64 = "0.22"
rand = "0.8"
fs2 = "0.4"
once_cell = "1.20"
dirs = "5.0"
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# HTTP (only used in cloak-core for egress; never in cloak-mcp)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2.5"

# Test
proptest = "1.5"
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.1"
insta = "1.40"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
