[package]
name = "cloak-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cloak CLI — human surface for the local secrets vault."

[[bin]]
name = "cloak"
path = "src/main.rs"

[dependencies]
cloak-core = { path = "../cloak-core" }
clap = { workspace = true }
clap_complete = { workspace = true }
rpassword = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSError"] }
objc2-local-authentication = { version = "0.2", features = ["LAContext", "LAError", "block2"] }
block2 = "0.5"

# Linux biometric / user-presence gate goes through polkit's
# `CheckAuthorization` D-Bus method (see `biometric_macos.rs` Linux arm
# and `scripts/polkit/dev.cloak.policy`). We use the typed proxy from
# `zbus_polkit` over the synchronous `zbus` blocking API so the
# `cloak show` code path stays sync; libsodium remains the only crypto
# primitive on the secret-protection path.
#
# `cloak-core`'s `secret-service` dep (Linux pepper, W7) already enables
# `zbus/tokio`; we only request `blocking-api` here. The blocking API's
# internal `block_on` lazily spins a tokio runtime in that configuration,
# which is exactly what we want for a sync CLI call.
[target.'cfg(target_os = "linux")'.dependencies]
zbus_polkit = { version = "5", default-features = false, features = ["blocking-api"] }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
