[package]
name = "cloak-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cloak CLI — human surface for the local secrets vault."

[[bin]]
name = "cloak"
path = "src/main.rs"

[dependencies]
cloak-core = { path = "../cloak-core" }
clap = { workspace = true }
clap_complete = { workspace = true }
rpassword = { workspace = true }
dialoguer = { workspace = true }
zxcvbn = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml_edit = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSError"] }
objc2-local-authentication = { version = "0.2", features = ["LAContext", "LAError", "block2"] }
block2 = "0.5"

# Linux biometric / user-presence gate goes through polkit's
# `CheckAuthorization` D-Bus method (see `biometric_macos.rs` Linux arm
# and `scripts/polkit/dev.cloak.policy`). We use the typed proxy from
# `zbus_polkit` over the synchronous `zbus` blocking API so the
# `cloak show` code path stays sync; libsodium remains the only crypto
# primitive on the secret-protection path.
#
# `cloak-core`'s `secret-service` dep (Linux pepper, W7) already pulls
# `zbus` in as a transitive dep with the `tokio` feature; we name it
# directly here so the `zbus::blocking::Connection` type is in scope
# for `cloak-cli`, and we add the `blocking-api` feature on top.
# zbus's internal `block_on` lazily spins a tokio runtime when the
# `tokio` feature is on, which is what we want for a sync CLI call.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5", default-features = false, features = ["blocking-api"] }
zbus_polkit = { version = "5", default-features = false, features = ["blocking-api"] }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
# Re-import cloak-core with `test-util` so the integration tests under
# `tests/` can set `CLOAK_DISABLE_ROLLBACK_MIRROR=1` against the test
# binary they exec. Release builds (the `cloak` bin in `[dependencies]`
# above) do NOT carry this feature, so a same-UID attacker cannot
# disable read-side rollback detection by setting the env var.
cloak-core = { path = "../cloak-core", features = ["test-util"] }
