[package]
name = "cloak-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cloak CLI — human surface for the local secrets vault."

[[bin]]
name = "cloak"
path = "src/main.rs"

[dependencies]
cloak-core = { path = "../cloak-core" }
clap = { workspace = true }
clap_complete = { workspace = true }
rpassword = { workspace = true }
dialoguer = { workspace = true }
zxcvbn = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml_edit = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# The biometric / user-presence gate now lives in `cloak-core`
# (`cloak_core::biometric`) so `cloakd` can fire the OS-level prompt
# itself when serving `vault.show`. The CLI re-uses that module via the
# `cloak-core` library dep — no per-platform CLI deps needed for it.

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
# Re-import cloak-core with `test-util` so the integration tests under
# `tests/` can set `CLOAK_DISABLE_ROLLBACK_MIRROR=1` against the test
# binary they exec. Release builds (the `cloak` bin in `[dependencies]`
# above) do NOT carry this feature, so a same-UID attacker cannot
# disable read-side rollback detection by setting the env var.
cloak-core = { path = "../cloak-core", features = ["test-util"] }
